--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "fashioncube",
+  "name": "shoppershub",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://quintuslabs.github.io/fashion-cube",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/quintuslabs/fashion-cube"
-  },
+  "homepage": ".",
   "keywords": [
     "fashion",
     "fashion-cube",
@@ -22,7 +18,6 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
-    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.17",
@@ -33,7 +28,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sass": "^1.86.0"
   },
   "scripts": {
     "start": "react-scripts start",
